<?xml version="1.0"?>
<package format="3">
  <name>apriltag_ros</name>
  <version>1.4.0</version>
  <description>Messages of external april tag node</description>

  <maintainer email="julia.sanchez@kitware.com">Julia Sanchez</maintainer>

  <license>Apache License Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
