<?xml version="1.0"?>
<package format="3">
  <name>livox_ros_driver</name>
  <version>3.0.0</version>
  <description>Messages of external livox driver node</description>

  <maintainer email="arthur.bourbousson@kitware.com">Arthur Bourbousson</maintainer>

  <license>Apache License Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
